# plum

./: README.md  pyproject.toml  setup.py
cli/: README.md  _utils.py  add.py  build.py  clean.py  clone.py  coverage.py  entry.py  init.py  parse.py  test.py  upgrade.py  verify.py
docker/cpp/: Dockerfile
plum/: __init__.py  constants.py
plum/actions/: README.md  __init__.py  _docker_runner.py  actions.py  cpp_actions.py  csharp_dotnet_actions.py  java_mvn_actions.py  js_actions.py  py_actions.py
plum/cli/: _utils.py  plum_action.py  plum_build.py  plum_clean.py  plum_clone.py  plum_coverage.py  plum_parse.py  plum_state.py  plum_upgrade.py
plum/configuration/: config_loader.py  configuration_model.py  default_config.py  detailed_configuration_model.py
plum/data/: 100_python_repos.csv  10k_challenge_fns_py.csv  csharp.config.jsonl  js_repos_small.csv  mocha_repos.txt  repo-analysis-3-18.csv  ts_compile_template.json
plum/environments/: README.md  __init__.py  cpp_repo.py  csharp_repo.py  java_repo.py  js_repo.py  py_repo.py  repository.py
plum/harnesslib/: __init__.py
plum/utils/: __init__.py  cobertura.py  function.py  helpers.py  llms.py  logger.py  parser_utils.py  prompt.py  prompt_creation.py  test_report_parsers.py
scripts/: build_all_subdirs_csharp.py  build_all_subdirs_java.py  docstring_experiment.py  method_generation_experiments.py  plum_example.py  run_all_csharp.py  run_code_coverage_csharp.py  run_code_coverage_java.py  test_generation_eval.py
scripts/docker_process/: README.md  end_to_end.py  plum_docker.py
test/java/: test_spotbugs.py
(+78 files in other folders)
