[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plum"
dynamic = ["version"]
description = "Pipeline for programmatically interacting with JS, TS, Python, Java and C# repos."
readme = "README.md"
requires-python = ">=3.6, <4"
dependencies = [
    "autopep8>=1.4.4",
    "click>=8.1.7",
    "coverage>=7.2.7",
    "filelock>=3.13.1",
    "GitPython>=3.1.40",
    "inflection>=0.5.1",
    "jsonpickle>=3.3.0",
    "lxml>=4.9.4",
    "openai>=0.25.0",
    "pdoc3>=0.10.0",
    "pycodestyle>=2.9.1",
    "pydocstyle>=6.1.1",
    "pydantic>=2.5.3",
    "pynpm>=0.1.2",
    "pytest>=7.1.3",
    "pytest-json-report>=1.5.0",
    "regex>=2022.9.13",
    "requests>=2.28.1",
    "source-parser>=1.0.4",
    "toml>=0.10.2",
    "tqdm>=4.64.1",
    "tenacity>=8.1.0",
    "tree-sitter>=0.20.1",
    "xmltodict>=0.13.0"
]

[project.entry-points."console_scripts"]
plum = "cli.entry:main"

[tool.setuptools.packages.find]
exclude = ["contrib", "docs", "test"]